# TrajectoryCalculator

./: 2darr.c  2darr.h  CMakeLists.txt  Environment.c  Environment.h  artydata.c  artydata.h  bounds.c  bounds.h  colortools.c  colortools.h  controlpanel.c  controlpanel.h  debugmalloc.h  dynarr.c  dynarr.h  environment.c  environment.h  felh_dok.odp  file.c  file.h  main.c  map.c  map.h  mapwindow.c  mapwindow.h  minmax.c  minmax.h  noise.c  noise.h  parameter.c  parameter.h  point.h  prog_dok.odt  pzh2000.txt  render.c  render.h  simulation.c  simulation.h  trajectory.c  (+4 more)
